2005-03-15  John W. Eaton  <jwe@octave.org>

	* Makefile.in (MATRIX_INC): Remove oct-spparms.h from the list.

2005-03-14  John W. Eaton  <jwe@octave.org>

	* Makefile.in (DISTFILES): Don't include $(UMFPACK_EXTRAS).
	(DISTDIRS): Don't include UMFPACK.
	(LIBOCTAVE_OBJECTS): Don't include $(UMFPACK_OBJ).
	(UMFPACK_SPECIAL_1, UMFPACK_SPECIAL): No need for special include
	flags for these files.
	Don't include include $(srcdir)/UMFPACK.files.
	Don't include include $(srcdir)/UMFPACK.rules.

	* UMFPACK.README, UMFPACK.files, UMFPACK.patch, UMFPACK.rules:
	Delete files.
	* UMFPACK: Delete directory tree.

	* dSparse.cc: Include <umfpack/umfpack.h> instead of just "umfpack.h".
	* CSparse.cc: Likewise.
	* SparsedbleLU.cc: Likewise.
	* SparseCmplxLU.cc: Likewise.

2005-03-14  David Bateman  <dbateman@free.org>

	* CSParse.cc, SparseCmplxLU.cc, SparsedbleLU.cc, dSparse.cc:
	Allow compilation to succeed if UMFPACK is not available.

2005-03-09  John W. Eaton  <jwe@octave.org>

	* Makefile.in (bin-dist): Delete target.
	(BINDISTLIBS, BINDISTFILES): Delete variables.

2005-03-01  John W. Eaton  <jwe@octave.org>

	* ODESSA.h, ODESSA.cc, ODESSA-opts.in: Delete.
	* Makefile.in: Remove them from the lists.

2005-02-28  John W. Eaton  <jwe@octave.org>

	* Makefile.in (LINK_DEPS): Remove -lglob from the list.

2005-02-27  David Bateman  <dbateman@free.org>

	* Sparse.cc (Sparse<T>::reshape): Set cidx for the N last elements
	in the sparse matrix.
	
2005-02-25  John W. Eaton  <jwe@octave.org>

	Sparse merge.

	2005-02-13  David Bateman  <dbateman@free.fr>

	* CSparse.cc (SparseComplexMatrix:dsolve, SparseComplexMatrix:utsolve,
	SparseComplexMatrix::ltsolve, SparseComplexMatrix::trisolve,
	SparseComplexMatrix::bsolve, SparseComplexMatrix:fsolve): Split sparse
	solver into separate functions for the diagonal, upper, lower 
	triangular, tridiagonal, banded and full cases.
	(SparseComplexMatrix::solve): rewrite to call the above function. One