@@ -1,3 +1,8 @@
+2005-03-26  John W. Eaton  <jwe@octave.org>
+
+	* cmd-edit.cc (do_readline): Wrap call to ::octave_rl_readline
+	with {BEGIN,END}_INTERRUPT_IMMEDIATELY_IN_FOREIGN_CODE.
+
 2005-03-15  John W. Eaton  <jwe@octave.org>
 
 	* Makefile.in (MATRIX_INC): Remove oct-spparms.h from the list.
